Have tuner show in advanced section (1/2)
Moves System UI Tuner up on the dashboard

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -197,7 +197,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
-                    android:value="com.android.settings.category.system" />
+                    android:value="com.android.settings.category.androidx" />
         </activity>
 
         <!-- Alternate Recents -->
